syntax = "proto3";

option java_package = "com.jonecx.qio.settings.proto";
option java_multiple_files = true;

enum ThemeConfig {
    FOLLOW_SYSTEM = 0;
    LIGHT = 1;
    DARK = 2;
}
